avoiding scrollbars in some cases

--- a/src/style.styl
+++ b/src/style.styl
@@ -2,8 +2,8 @@ body, html {
 	background: white;
 	color: black;
 	position: absolute;
-	height: 100%;
-	width: 100%;
+	height: 99%;
+	width: 99%;
 	padding: 0;
 	margin: 0;
 }
